Add key value change

--- a/src/music-puzzle.less
+++ b/src/music-puzzle.less
@@ -56,23 +56,9 @@
   .box {
     padding: 20px;
     text-align: center;
-    color: white;
   }
 
-  .red {
-    background-color: #ff4d4f;
-  }
-
-  .blue {
-    background-color: #40a9ff;
-  }
-
-  .green {
-    background-color: #73d13d;
-  }
-
-  .orange {
-    background-color: #ffa940;
+  .w100 {
     width: 100%;
   }
 }
