--- a/src/music-puzzle.less
+++ b/src/music-puzzle.less
@@ -5,41 +5,32 @@
   .container {
     padding: 20px;
   }
-
   .row {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    margin: -8px; /* Negative margin for gutters */
+    justify-content: space-around;
+    background-color: #f7f7f7;
   }
-
   .col {
-    padding: 8px; /* Padding for gutters */
     box-sizing: border-box;
     display: flex;
-    flex-direction: row;
-    width: 100%;
-  }
-
-  .left {
-    display: flex;
     flex-wrap: wrap;
+  }
+  .left {
+    width: 48%;
     flex: 1 1 auto;
-    width: 50%;
+    border: 1px solid gray;
+    border-radius: '6px';
   }
-  
-  .col-3 {
-    flex: 1;
-  }
-  
-  .col-6 {
-
-    flex: 2;
-  }
-
   .right {
-    width: 50%; /* Adjust the width to prevent stretching */
+    width: 48%;
     padding: 0;
+    border: 1px solid gray;
+    border-radius: '6px';
+  }
+  .left + .right {
+    margin-left: 1%;
   }
 
   /* Mobile view */
@@ -47,8 +38,7 @@
     .left, .right {
       width: 100%; /* Take full width on small screens */
     }
-
-    .left .col-3, .left .col-6 {
+    .left .left {
       width: 100%; /* Ensure columns stack vertically on small screens */
     }
   }
@@ -57,7 +47,6 @@
     padding: 20px;
     text-align: center;
   }
-
   .w100 {
     width: 100%;
   }
