--- a/src/music-puzzle.less
+++ b/src/music-puzzle.less
@@ -8,12 +8,16 @@
     width: 100%;
     display: flex; 
     justify-content: space-between;
+    flex-wrap: wrap;
   }
   .left {
     flex: 0 1 49%; 
     border: 1px gray solid; 
     border-radius: 12px; 
     padding: 20px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
   }
   .right {
     flex: 0 1 49%; 
@@ -24,13 +28,47 @@
   .innerContainer {
     box-sizing: border-box;
     width: 100%;
+    height: 100%;
     display: flex; 
-    justify-content: space-between;
+    justify-content: space-around;
   }
-  .item {
+  .label {
+    padding-top: 20px;
+  }
+  .buttons {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 20px;
+    padding-top: 20px;
+  }
+  .button {
+    width: fit-content;
+    margin: 0 4px;
+  }
+  .item-1 {
     flex: 0 0 30%;
     border: 1px gray solid; 
-    border-radius: 12px;
+    text-align: center;
+    align-items: stretch;
+    flex: 1 0 30%; 
+  }
+  .item-2 {
+    flex: 0 0 30%;
+    border: 1px gray solid; 
+    text-align: center;
+    align-items: stretch;
+    display: flex;
+    flex-direction: column;
+    flex: 1 0 40%;
+  }
+  .item-3 {
+    flex: 0 0 30%;
+    border: 1px gray solid; 
+    text-align: center;
+    align-items: stretch;
+    display: flex;
+    flex-direction: column;
+    flex: 1 0 30%;
   }
 
   /* Mobile view */
