Set inner container wrapable

--- a/src/music-puzzle.less
+++ b/src/music-puzzle.less
@@ -31,6 +31,8 @@
     height: 100%;
     display: flex; 
     justify-content: space-around;
+    display: flex;
+    flex-wrap: wrap;
   }
   .label {
     padding-top: 20px;
