--- a/src/music-puzzle.less
+++ b/src/music-puzzle.less
@@ -48,20 +48,18 @@
     margin: 0 4px;
   }
   .item-1 {
-    flex: 0 0 30%;
     border: 1px gray solid; 
     text-align: center;
     align-items: stretch;
-    flex: 1 0 30%; 
+    flex: 0 1 35%; 
   }
   .item-2 {
-    flex: 0 0 30%;
     border: 1px gray solid; 
     text-align: center;
     align-items: stretch;
     display: flex;
     flex-direction: column;
-    flex: 1 0 40%;
+    flex: 0 1 35%;
   }
   .item-3 {
     flex: 0 0 30%;
@@ -70,7 +68,9 @@
     align-items: stretch;
     display: flex;
     flex-direction: column;
-    flex: 1 0 30%;
+  }
+  .addPropItem {
+    margin-top: 10px;
   }
 
   /* Mobile view */
