--- a/src/music-puzzle.less
+++ b/src/music-puzzle.less
@@ -34,6 +34,9 @@
     display: flex;
     flex-wrap: wrap;
   }
+  .descriptionContainer {
+    margin: 0 20px;
+  }
   .label {
     padding-top: 20px;
   }
