Fix errors in parallelism up model

--- a/src/music-puzzle.less
+++ b/src/music-puzzle.less
@@ -40,11 +40,15 @@
   .label {
     padding-top: 20px;
   }
+  .dadLabel {
+    min-height: 32px;
+  }
   .buttons {
     display: flex;
     justify-content: left;
     padding-bottom: 10px;
     min-width: 140px;
+    min-height: 32px;
   }
   .button {
     width: fit-content;
