Add descriptions in disply mode

--- a/src/music-puzzle.less
+++ b/src/music-puzzle.less
@@ -1,4 +1,16 @@
-.EP_Educandu_Example_Display {}
+@import "@educandu/educandu/styles/global-variables.less";
+
+.EP_Educandu_Example_Display {
+
+  .smallFontSize {
+    font-size: @edu-font-size-sm;
+  }
+
+  .spacer {
+    height: @edu-content-padding * 2;
+  }
+
+}
 
 .EP_Educandu_Example_Editor {
 
