--- a/src/music-puzzle.less
+++ b/src/music-puzzle.less
@@ -115,13 +115,9 @@
     padding-left: 2px;
     min-height: 30px;
   }
-  .iu-checkBoxContainer {
-    margin-top: @edu-content-padding * 2;
-    display: flex;
-    flex-direction: column;
-  }
   .iu-CheckBoxHorzontaLabel {
     display: flex;
+    margin-right: 15px;
   }
   .svg-color svg {
     fill: @edu-primary-color-dark; 
