--- a/test-app/src/main.less
+++ b/test-app/src/main.less
@@ -2,4 +2,4 @@
 @import url('@educandu/educandu/styles/main.less');
 
 // Example plugin styles
-@import url('../../src/music-puzzle.less');
+@import url('../../src/progression-models.less');
