Remove hooks in display view

--- a/src/progression-models.less
+++ b/src/progression-models.less
@@ -12,6 +12,15 @@
   .svg-color svg {
     fill: @edu-primary-color-dark; 
   }
+  .width50 {
+    width: 50%;
+  }
+  .width100 {
+    width: 100%;
+  }
+  .centered {
+    text-align: center;
+  }
 
 }
 
