Replace style attributes with classnames

--- a/src/progression-models.less
+++ b/src/progression-models.less
@@ -59,16 +59,15 @@
     height: 100%;
     display: flex; 
     justify-content: flex-start;
-    display: flex;
     flex-wrap: wrap;
   }
   .descriptionContainer {
     margin: 0 20px;
   }
   .formItemStyle {
-    margin-top: '45px'; 
-    padding-top: '30px'; 
-    border-top: '1px #bfbfbf solid';
+    margin-top: 45px; 
+    padding-top: 30px; 
+    border-top: 1px #bfbfbf solid;
   }
   .width100 {
     width: 100%;
@@ -100,7 +99,6 @@
     display: block;
     padding-left: 6px;
   }
-
   .gutter-example .ant-row > div {
     background: transparent;
     border: 0;
@@ -118,9 +116,8 @@
     text-align: center;
     background-color: @edu-background-color-light;
   }
-
   .inspectorItemContainer {
-    display: flex; 
+    display: flex;
     flex-direction: row; 
     align-items: flex-end; 
     flex-wrap: wrap;
@@ -130,6 +127,9 @@
     display: flex;
     flex-direction: column; 
     align-items: left;  
+  }
+  .modelSelector {
+    display: flex;
   }
   .inspectorSelect {
     width: 180px;
@@ -141,6 +141,22 @@
   }
   .pt30 {
     padding-top: 30px;
+  }
+  .voiceChangeHeader {
+    display: block;
+    margin-bottom: 10px;
+  }
+  .voiceSwitchHeader {
+    display: block;
+    margin-bottom: 15px;
+  }
+  .marginCorrection-4 {
+    margin-top: -4px;
+  }
+  .showDescritionSwitch {
+    display: flex;
+    margin-top: 15px;
+    gap: 6px;
   }
   .inspectorInputNumber {
     min-width: 75px;
