Refactor code and terminate bugs

--- a/src/progression-models.less
+++ b/src/progression-models.less
@@ -161,6 +161,9 @@
   .inspectorInputNumber {
     min-width: 75px;
   }
+  .exampleContainer {
+    margin-bottom: 15px;
+  }
   .ui-displayLabel {
     width: 180px;
     margin-right: 15px;
